--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "node" : ">=0.8.11"
     },
     "dependencies": {
+			"fs-extra": ">=0.5.0"
     },
     "description": "An Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
