--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
         "node" : ">=0.8.11"
     },
     "dependencies": {
-			"fs-extra": ">=0.5.0"
+      "fs-extra": ">=0.5.0"
     },
     "description": "An Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
-    "homepage": "https://github.com/akhoury/ginxparser",
+    "homepage": "",
     "repository" :
     {
         "type" : "git",
-        "url" : "git://github.com/akhoury/ginxparser.git"
+        "url" : ""
     }
 }
