--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "node" : ">=0.8.11"
     },
     "dependencies": {
-      "fs-extra": ">=0.5.0"
+      "fs-extra": ">=0.5.0",
+			"mocha": ">=1.8.1"
     },
     "description": "An Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
