--- a/package.json
+++ b/package.json
@@ -6,18 +6,17 @@
     },
     "main": "./lib/ginxparser",
     "engines": {
-        "node" : ">=0.8.11"
+        "node": ">=0.8.11"
     },
     "dependencies": {
-      "fs-extra": ">=0.5.0",
-			"mocha": ">=1.8.1"
+        "fs-extra": ">=0.5.0",
+        "mocha": ">=1.8.1"
     },
     "description": "An Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
-    "homepage": "",
-    "repository" :
-    {
-        "type" : "git",
-        "url" : ""
+    "homepage": "https://github.com/akhoury/ginxparser",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/akhoury/ginxparser.git"
     }
 }
