--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
         "lib": "./lib"
     },
     "main": "./lib/ginx",
-    "engines": {
+    "bin": {
+			"ginx": "./bin/ginx"
+		},
+		"engines": {
         "node": ">=0.8.11"
     },
     "devDependencies": {
         "fs-extra": "0.5.0",
-        "mocha": "1.8.1"
+        "mocha": "1.8.1",
+        "optimist": "0.3.5"
     },
     "description": "A fast Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
