--- a/package.json
+++ b/package.json
@@ -6,15 +6,17 @@
     },
     "main": "./lib/ginx",
     "bin": {
-			"ginx": "./bin/ginx"
+			"ginx": "./bin/ginx.js"
 		},
 		"engines": {
         "node": ">=0.8.11"
     },
+    "dependencies": {
+        "optimist": "0.3.5"
+    },
     "devDependencies": {
         "fs-extra": "0.5.0",
-        "mocha": "1.8.1",
-        "optimist": "0.3.5"
+        "mocha": "1.8.1"
     },
     "description": "A fast Nginx log parser for node.js written in Javascript.",
     "author": "Aziz Khoury<bentael@gmail.com>",
